PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/dynamicProgrammingSyntax.par
dynamicProgrammingSyntax{

dp simple([[Int]] input) : [[Int]] res {
   res[INDEX0 + 1] = input[0] + 2
   res[1] = input[1] * 2
}

dp scalar([Int] input) : [[Int]] res {
    res[0][0] = input[2] * 2
}

dp simple2(Int input, Int input2) : Int res {
   res = input + 2
   res = input * 2
}

seq main() : Int {

    var [Int] input = [1,1]

    var [Int] erg = [0,0]

    erg = simple<<<5>>>(input)

    return 0
}
}